fix alignment, resized nav

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ p {
     font-family: 'Open Sans', sans-serif;   
 }
 .nav-link {
-    color:black;
+    color:white;
 };
 
 @media screen and (min-width:992px){
@@ -35,7 +35,10 @@ header {
     width: 100%;
     z-index: 4;
 }
+nav {
+    height: 12vh;
 
+}
   main {
 }
 
@@ -89,11 +92,23 @@ header {
     background-color: grey;
     /* width: 100vw; */
   }
+  .section-3-wrapper {
+    background-color: rgba(128, 128, 128, 0.574);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* width: 100vw; */
+  }
+
   .section-3 .services {
     /* background-color: red; */
     display: flex;
     flex-direction: row;
     width: 100%;
+    justify-content: center;
+    text-align: center;
     
   }
   .section-3 .services i{
@@ -112,6 +127,10 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.325);
+    height: 10vh;
+    width: 100%;
     
   }
 
